# smart-dataset

./: Cargo.toml  README.md
smart-dataset/: Cargo.toml
smart-dataset-aws/: Cargo.toml
smart-dataset-aws/src/: lib.rs  s3.rs
smart-dataset/src/: lib.rs  local.rs
src/: aws_s3.rs  lib.rs  local.rs
