
[package]
name = "smart-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.21.0"
aws-config = "0.51.0"
aws-smithy-http = "0.51.0"
aws-smithy-async = "0.51.0"
aws-smithy-types = "0.51.0"
log = "0.4.17"
