
[package]
name = "smart-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
aws-sdk-s3 = { version = "0.21.0", optional = true}
aws-config = { version = "0.51.0",  optional = true}
aws-smithy-http = { version = "0.51.0", optional = true}
aws-smithy-async = { version = "0.51.0", optional = true}
aws-smithy-types = { version = "0.51.0", optional = true}

[features]
aws = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-http", "dep:aws-smithy-async", "dep:aws-smithy-types"]

